[CSS]: Change the searchResult.css location file

--- a/searchResults.html
+++ b/searchResults.html
@@ -5,8 +5,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <title>build this webpage</title>
     <link rel="icon" href="images/index.ico" />
-    <link rel="stylesheet" href="searchResult.css" />
-    <script src="script.js" async></script>
+    <link rel="stylesheet" href="./css/searchResult.css" />
 </head>
 <body>
 
