[FEATURE]: Add  "people also ask" and aside sections

--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -3,35 +3,35 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Google</title>
-	<link rel="icon"  href="favicon.ico">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="icon"  href="../images/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="../css/homePage.css">
 </head>
 <body>
       <nav>
       	<a href="#">Gmail</a>
       	<a href="#">Images</a>
-      	<img src="images/g-menu.PNG">
+      	<img src="../images/g-menu.png">
       	<button>Sign in</button>
       </nav>
       <section class="section-1">
-      	<img src="images/logo.png" class="logo">
+      	<img src="../images/logo.png" class="logo">
       	<form><br><br>
       		<div class="s-box">
-      			<img src="images/search.svg" class="search-icon">
-      			<input type="text" class="s-input">
-      			<img src="images/vs.png" class="vs-icon">
-      			<input type="button" class="s-btn" value="Google Search" onclick="window.location.href='./searchResults.html'">
-      			<input type="submit" class="s-btn" value="I'm Feeling Lucky">
+      			<img src="../images/search.svg" class="search-icon">
+      			<input type="text" class="s-input" placeholder="Search Google or type a URL">
+      			<img src="../images/vs.png" class="vs-icon">
+      			<input type="button" class="search-btn" value="Google Search" onclick="window.location.href='./searchResults.html'">
+      			<input type="submit" class="search-btn" value="Welcome!">
       		</div>
       	</form>
-      	<div class="lang">
+      	<div class="language">
       		Google offered in:
-      		<a href="#">Nederlands</a>
-      		<a href="#">Frysk</a>
+      		<a href="#">العربية</a>
+      		<a href="#">עברית</a>
       	</div>
       </section>
       <footer>
-      	<h4>Nederlands</h4>
+      	<h4>The Collage of Management - Academic studies</h4>
       	<div class="links">
       		<div class="link-1">
       			<a href="#">Advertising</a>
