--- a/pages/searchResults.html
+++ b/pages/searchResults.html
@@ -13,14 +13,17 @@
             <div>
                 <a href="https://victor-lf.github.io/google-homepage/"><img src="../images/google_logo.png" alt="Google" width="120" height="44" /></a>
                 <form action="#" method="GET">
-                    <input type="search" name="query" title="Search" value="build this webpage" autocomplete="off" />
-                    <button type="submit">
-                        <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                            <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59
-                            4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01
-                            14 9.5 11.99 14 9.5 14z"></path>
-                        </svg>
-                    </button>
+                    <div class="s-box">
+                        <input type="search" name="query" title="Search" value="build this webpage" autocomplete="off" />
+                        <div class="search_svg">
+                            <img src="../images/vs.png" class="vs-icon">
+                            <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59
+                                4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01
+                                14 9.5 11.99 14 9.5 14z"></path>
+                            </svg>
+                        </div>
+                    </div>
                 </form>
                 <span><a id="apps" href="#"></a><a id="signin" href="#">Sign in</a></span>
             </div>
