[FIX]: fix small changes

--- a/pages/homePage.html
+++ b/pages/homePage.html
@@ -21,7 +21,7 @@
       			<input type="text" class="s-input" placeholder="Search Google or type a URL">
       			<img src="../images/vs.png" class="vs-icon">
       			<input type="button" class="search-btn" value="Google Search" onclick="window.location.href='./searchResults.html'">
-      			<input type="submit" class="search-btn" value="Welcome!">
+      			<input type="submit" class="search-btn" value="I'm Feeling Lucky">
       		</div>
       	</form>
       	<div class="language">
@@ -31,12 +31,12 @@
       	</div>
       </section>
       <footer>
-      	<h4>The Collage of Management - Academic studies</h4>
+      	<h4>Israel</h4>
       	<div class="links">
       		<div class="link-1">
+      			<a href="#">About</a>
       			<a href="#">Advertising</a>
       			<a href="#">Business</a>
-      			<a href="#">About</a>
       			<a href="#">How Search works</a>
       		</div>
       		<div class="link-2">
@@ -46,6 +46,5 @@
       		</div>
       	</div>
       </footer>
-
 </body>
 </html>
