--- a/pages/searchResults.html
+++ b/pages/searchResults.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <title>how to create a website</title>
     <link rel="icon" href="../images/index.ico" />
     <link rel="stylesheet" href="../css/searchResult.css" />
@@ -240,7 +239,7 @@
         </main>
 
         <footer>
-            <h4>Website</h4>
+            <h4>Israel</h4>
             <div class="links">
                 <div class="link-2">
                     <a href="#">Help</a>
